--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,9 +34,13 @@
     "Tohoku",
     "Toshogu",
     "bunraku",
+    "daiikka",
+    "dango",
     "else's",
     "pachinko",
+    "pydub",
     "shogi",
-    "tabi"
+    "tabi",
+    "zfill"
   ]
 }
