--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,8 @@
     "tabi",
     "zfill"
   ],
-  "editor.insertSpaces": false
+	"editor.insertSpaces": false,
+	"[python]": {
+		"editor.insertSpaces": true
+	}
 }
